# VGG16-Memory-Optimization

./: CMakeLists.txt  PROJECT_REPORT.txt  README.md  Readme.md  requirements.txt
include/: gpu.h  gpu_common.cuh  utils.h
scripts/: build.sh  export_vgg16.py
src/: gpu.cpp  gpu.cu  main.cpp  utils.cpp
